--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,44 +1,41 @@
-name: NoUUIDWhiteList
+name: FixUUID
 version: '${project.version}'
-main: com.nouuidwhitelist.NoUUIDWhiteList
-api-version: 1.13
+main: com.github.fixuuid.FixUUID
+api-version: '1.13'
 authors: [ 3cxc ]
-description: 去掉了UUID验证的轻量级白名单插件
-website: https://github.com/3cxc/NoUUIDWhiteList
+description: UUID修复，以防止未进入过服务器的玩家与服务器UUID的不一致
+website: https://github.com/3cxc/FixUUID
+depend: [ProtocolLib,ToolsLib]
 commands:
   whitelist:
     description: 白名单指令
 
 permissions:
-  whitelist.admin:
+  fixuuid.whitelist.admin:
     description: 本插件的管理员权限
     default: op
     children:
-      whitelist.help: true
-      whitelist.add: true
-      whitelist.remove: true
-      whitelist.on: true
-      whitelist.off: true
-      whitelist.list: true
-      whitelist.reload: true
-  whitelist.help:
-    description: 获取子命令TAB列表的权限(就是能否使用TAB补全)
-    default: op
-  whitelist.add:
+      fixuuid.whitelist.add: true
+      fixuuid.whitelist.remove: true
+      fixuuid.whitelist.on: true
+      fixuuid.whitelist.off: true
+      fixuuid.whitelist.list: true
+      fixuuid.whitelist.reload: true
+  fixuuid.whitelist.add:
     description: 向白名单里添加玩家
     default: op
-  whitelist.remove:
+  fixuuid.whitelist.remove:
     description: 从白名单里删除一个玩家
     default: op
-  whitelist.on:
+  fixuuid.whitelist.on:
     description: 开启白名单
     default: op
-  whitelist.off:
+  fixuuid.whitelist.off:
     description: 关闭白名单
     default: op
-  whitelist.reload:
+  fixuuid.whitelist.reload:
     description: 重载白名单
     default: op
-  whitelist.list:
+  fixuuid.whitelist.list:
     description: 查看在白名单内的所有玩家
     default: op
