--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,25 +1,11 @@
-#是否启用本插件
-Enable: true
 #是否启用更新检测
 Update: true
 
 #白名单功能管理
 Whitelist:
-  # 白名单修复模式
-  # 0 = 禁用该功能
-  # 1 = 进行自动UUID修复，不接管原版命令(下面两项将自动禁用)
-  # 2 = 接管原版命令，适用于自动UUID修复无效的情况
-  mode: 0
-  #启用此功能后，在线的玩家如没有白名单则会被踢出
+  #是否启用白名单代理
+  proxy_mode: true
+  #启用此功能后，在线的玩家如没有白名单则会被踢出(符合原版?)
   KickOnlinePlayer: false
   #玩家白名单
-  list: []
-
-OP:
-  # OP修复模式
-  # 0 = 禁用该功能
-  # 1 = 进行自动UUID修复
-  # 2 = 接管原版命令，适用于自动UUID修复无效的情况
-  mode: 0
-  #OP名单
   list: []
